initial renaming of project -> program

--- a/blink_sass/pages/_projects.sass
+++ b/blink_sass/pages/_projects.sass
@@ -67,7 +67,7 @@
         &:nth-child(2)
           text-decoration: line-through
 
-#save-projects-list, #public-projects-list
+#save-programs-list, #public-programs-list
 
   .table
     .row-odd
@@ -122,13 +122,13 @@
         .fa
           padding-right: 8px
 
-.project-study
+.program-study
   .dropdown
     margin-right: 12px
   h4
     margin-top: 2px
 
-#project_list
+#program_list
   .dropdown-menu > li > a button
     border: none
     background-color: transparent
