--- a/templates/GenespotRE/dashboard.html
+++ b/templates/GenespotRE/dashboard.html
@@ -212,39 +212,39 @@
             <section class="panel panel-default">
                 <div class="panel-heading">
                     <h3 class="panel-title">
-                        <a href="{% url 'projects' %}">Saved Projects ({{ projects.count }})</a></h3>
+                        <a href="{% url 'programs' %}">Saved Programs ({{ programs.count }})</a></h3>
                 </div>
                 <div class="panel-body">
-                    <p>You can upload data from your own research projects.</p>
-                    {% if projects.count > 0 %}
+                    <p>You can upload data from your own research programs.</p>
+                    {% if programs.count > 0 %}
                     <ul class="table-list">
-                        {% for project in projects|slice:':6' %}
+                        {% for program in programs|slice:':6' %}
                            <li>
-                               <a href="{% url 'project_detail' project.id %}">
-                                   <p class="list-title">{{ project.name }}</p>
-                                   {% if project.description %}
-                                    <p>{{ project.description|slice:':65' }}{% if project.description|length > 65 %}&hellip;{% endif %}</p>
+                               <a href="{% url 'program_detail' program.id %}">
+                                   <p class="list-title">{{ program.name }}</p>
+                                   {% if program.description %}
+                                    <p>{{ program.description|slice:':65' }}{% if program.description|length > 65 %}&hellip;{% endif %}</p>
                                    {% endif %}
                                </a>
                            </li>
                         {% endfor %}
-                        {% if user.project_set.all|active|length > 6 %}
-                            <a class="btn btn-link" href="{% url 'projects' %}">View all</a>
+                        {% if user.program_set.all|active|length > 6 %}
+                            <a class="btn btn-link" href="{% url 'programs' %}">View all</a>
                         {% endif %}
                     </ul>
                     {% endif %}
                 </div>
                 <div class="panel-footer">
-                    <a href="{% url 'project_upload' %}" class="btn btn-link"><i class="fa fa-cloud-upload"></i>Upload Project Data</a>
+                    <a href="{% url 'program_upload' %}" class="btn btn-link"><i class="fa fa-cloud-upload"></i>Upload Program Data</a>
                 </div>
             </section>
         </div>
-{#      TODO: This div is hidden until we can figure out creating workbooks from projects/studies #}
+{#      TODO: This div is hidden until we can figure out creating workbooks from programs/studies #}
 {#        <div class="col-md-6">#}
 {#            <section class="panel panel-default">#}
 {#                <div class="panel-heading">#}
 {#                    <h3 class="panel-title">#}
-{#                        <a href="{% url 'public_projects' %}">Public Data ({% public_project_count %})</a></h3>#}
+{#                        <a href="{% url 'public_programs' %}">Public Data ({% public_program_count %})</a></h3>#}
 {#                </div>#}
 {#                <div class="panel-body">#}
 {#                    <p>Browse publicly-available studies and data</p>#}
