--- a/templates/projects/program_detail.html
+++ b/templates/projects/program_detail.html
@@ -1,44 +1,44 @@
 {% extends 'base.html' %}
 {% load staticfiles %}
 {% load custom_tags %}
-{% block title %}Project | ISB-CGC{% endblock %}}
+{% block title %}Program | ISB-CGC{% endblock %}}
 {% block extra_css_libs %}{% endblock %}
 {% block header %}{% endblock %}
 
-{% block link_page_name %}project_detail{% endblock %}
-{% block page_name %}project_detail{% endblock %}
+{% block link_page_name %}program_detail{% endblock %}
+{% block page_name %}program_detail{% endblock %}
 
 {% block page_header %}
 <div class="container">
     <ol class="breadcrumb">
         <li><a href="{% url 'dashboard' %}">Your Dashboard</a></li>
-        <li><a href="{% url 'projects' %}">Projects</a></li>
+        <li><a href="{% url 'programs' %}">Programs</a></li>
     </ol>
-    <h1 class="page-header">{{ project.name }}</h1>
-    <p class="project-description">{{ project.description }}</p>
+    <h1 class="page-header">{{ program.name }}</h1>
+    <p class="program-description">{{ program.description }}</p>
     <ul class="page-action-group">
 {#        <li role="menuitem">#}
-{#            <form action="{% url 'worksheet_create_with_projects' %}" method="POST">#}
+{#            <form action="{% url 'worksheet_create_with_programs' %}" method="POST">#}
 {#                {% csrf_token %}#}
-{#                <input type="hidden" name="project_id" value="{{ project.id }}">#}
+{#                <input type="hidden" name="program_id" value="{{ program.id }}">#}
 {#                <button type="submit" class="btn btn-primary" >New Workbook</button>#}
 {#            </form>#}
 {#        </li>#}
 {#        <li class="separator"></li>#}
-        {% if project.owner.id == user.id %}
-        <li role="menuitem"><a href="{% url 'project_upload_existing' %}?project_id={{ project.id }}" class="btn btn-info"><i class="fa fa-cloud-upload"></i>Upload Data</a></li>
-        <li role="menuitem"><button class="btn btn-info" data-toggle="modal" data-target="#edit-project-details-modal">Edit Details</button></li>
-        <li role="menuitem"><button class="btn btn-info project-delete" data-toggle="modal" data-target="#delete-project-modal">Delete</button></li>
+        {% if program.owner.id == user.id %}
+        <li role="menuitem"><a href="{% url 'program_upload_existing' %}?program_id={{ program.id }}" class="btn btn-info"><i class="fa fa-cloud-upload"></i>Upload Data</a></li>
+        <li role="menuitem"><button class="btn btn-info" data-toggle="modal" data-target="#edit-program-details-modal">Edit Details</button></li>
+        <li role="menuitem"><button class="btn btn-info program-delete" data-toggle="modal" data-target="#delete-program-modal">Delete</button></li>
         <li class="separator"></li>
-        <li role="menuitem"><button class="btn btn-info" data-toggle="modal" data-target="#share-project-modal">Share</button></li>
+        <li role="menuitem"><button class="btn btn-info" data-toggle="modal" data-target="#share-program-modal">Share</button></li>
         {% elif shared %}
-        <li role="menuitem"><button class="btn btn-info" data-toggle="modal" data-target="#remove-project-modal">Remove</button></li>
+        <li role="menuitem"><button class="btn btn-info" data-toggle="modal" data-target="#remove-program-modal">Remove</button></li>
         <li class="separator"></li>
         {% endif %}
-        {% if project.is_public %}
-        <li><em>Public Project</em></li>
+        {% if program.is_public %}
+        <li><em>Public Program</em></li>
         {% else %}
-        <li role="menuitem"><button class="btn btn-link" data-toggle="modal" data-target="#share-project-modal">Shared with (<span class="share-count">{{ project.shared.count }}</span>)</button></li>
+        <li role="menuitem"><button class="btn btn-link" data-toggle="modal" data-target="#share-program-modal">Shared with (<span class="share-count">{{ program.shared.count }}</span>)</button></li>
         {% endif %}
     </ul>
 </div>
@@ -47,15 +47,15 @@
     <div class="container">
         <div class="error-messages"></div>
         {% for study in studies %}
-        <section class="project-study panel panel-primary" data-study-id="{{ study.id }}">
+        <section class="program-study panel panel-primary" data-study-id="{{ study.id }}">
             <div class="panel-heading clearfix">
                 <div class="dropdown pull-left">
-                    {% if not project.is_public %}
+                    {% if not program.is_public %}
                     <a data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fa fa-gear"></i></a>
                     {% endif %}
                     <ul class="dropdown-menu">
 {#                        <li role="menuitem"><a href="">New Workbook</a></li>#}
-                        {% if project.owner.id == user.id %}
+                        {% if program.owner.id == user.id %}
                         <li role="menuitem"><a data-toggle="modal" data-target="#delete-study-modal-{{ study.id }}" class="study-delete">Delete</a></li>
                         {% endif %}
                         {% if shared %}
@@ -90,7 +90,7 @@
                     <dd>{{ study.last_date_saved|date:'M d, Y, g:i a' }}</dd>
                     <dt>Number of Files</dt>
                     <dd>{{ study.get_file_count }}</dd>
-                    {% if not project.is_public %}
+                    {% if not program.is_public %}
                         <dt>Cloud Storage Bucket Name</dt>
                         <dd>{{ study.user_data_tables_set.all.0.google_bucket.bucket_name }}</dd>
                         <dt>BigQuery Data Table(s)</dt>
@@ -106,7 +106,7 @@
 
     </div>
 
-    {% include "projects/project_modals.html" %}
+    {% include "projects/program_modals.html" %}
 
     <script type="text/javascript">
 {#    var base_api_url            = '{{ BASE_API_URL|safe }}';#}
@@ -116,4 +116,4 @@
 </script>
 {% endblock %}
 
-{% block js_file %}{% static 'js/project_details.js' %}{% endblock %}
+{% block js_file %}{% static 'js/program_details.js' %}{% endblock %}
