--- a/templates/projects/program_modals.html
+++ b/templates/projects/program_modals.html
@@ -1,19 +1,19 @@
 <!-- Edit Details Modal -->
-<div class="modal fade" id="edit-project-details-modal" tabindex="-1" role="dialog" aria-labelledby="edit-project-header" aria-hidden="true">
+<div class="modal fade" id="edit-program-details-modal" tabindex="-1" role="dialog" aria-labelledby="edit-program-header" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                <h4 class="modal-title">Project Details</h4>
+                <h4 class="modal-title">Program Details</h4>
             </div>
-            <form id="edit-project" method="POST" action="{% url 'project_edit' project.id %}">
+            <form id="edit-program" method="POST" action="{% url 'program_edit' program.id %}">
                 {% csrf_token %}
                 <div class="modal-body">
                     <label for="share-viz-users">Name (required)</label>
-                    <input class="form-control" type="text" name="name" value="{{ project.name }}" required/>
+                    <input class="form-control" type="text" name="name" value="{{ program.name }}" required/>
                     <br>
                     <label for="share-viz-users">Description (optional)</label>
-                    <textarea class="form-control" name="description">{{project.description }}</textarea>
+                    <textarea class="form-control" name="description">{{program.description }}</textarea>
                 </div>
                 <div class="modal-footer">
                     <input type="submit" value="Update" class="btn btn-primary" />
@@ -24,20 +24,20 @@
     </div>
 </div>
 
-<!-- Delete Project Modal -->
-<div class="modal fade" id="delete-project-modal" tabindex="-1" role="dialog" aria-labelledby="delete-project-header" aria-hidden="true">
+<!-- Delete Program Modal -->
+<div class="modal fade" id="delete-program-modal" tabindex="-1" role="dialog" aria-labelledby="delete-program-header" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                <h4 class="modal-title">Delete this Project?</h4>
+                <h4 class="modal-title">Delete this Program?</h4>
             </div>
             <div class="modal-body">
                 <div class="alert alert-warning alert-dismissable">
-                    Deleting this project will not delete underlying Google BigQuery tables or files in Google Cloud Storage. Those must be removed manually.
+                    Deleting this program will not delete underlying Google BigQuery tables or files in Google Cloud Storage. Those must be removed manually.
                 </div>
             </div>
-            <form id="delete-project" method="POST" action="{% url 'project_delete' project.id %}" data-redirect="{% url 'projects' %}">
+            <form id="delete-program" method="POST" action="{% url 'program_delete' program.id %}" data-redirect="{% url 'programs' %}">
                 {% csrf_token %}
                 <div class="modal-footer">
                     <input type="submit" value="Delete" class="btn btn-primary" />
@@ -49,15 +49,15 @@
 </div>
 
 {% if shared %}
-<!-- Remove Project Modal -->
-<div class="modal fade" id="remove-project-modal" tabindex="-1" role="dialog" aria-labelledby="remove-project-header" aria-hidden="true">
+<!-- Remove Program Modal -->
+<div class="modal fade" id="remove-program-modal" tabindex="-1" role="dialog" aria-labelledby="remove-program-header" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                <h4 class="modal-title">Remove Yourself from this Project?</h4>
+                <h4 class="modal-title">Remove Yourself from this Program?</h4>
             </div>
-            <form id="remove-project" method="POST" action="{% url 'sharing_remove' shared.id %}" data-redirect="{% url 'projects' %}">
+            <form id="remove-program" method="POST" action="{% url 'sharing_remove' shared.id %}" data-redirect="{% url 'programs' %}">
                 {% csrf_token %}
                 <div class="modal-footer">
                     <input type="submit" value="Remove" class="btn btn-primary" />
@@ -69,28 +69,28 @@
 </div>
 {% endif %}
 
-<!-- Share Project Modal -->
-<div class="modal fade" id="share-project-modal" tabindex="-1" role="dialog" aria-labelledby="delete-project-header" aria-hidden="true">
+<!-- Share Program Modal -->
+<div class="modal fade" id="share-program-modal" tabindex="-1" role="dialog" aria-labelledby="delete-program-header" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                <!--<h4 class="modal-title">Project Sharing</h4>-->
+                <!--<h4 class="modal-title">Program Sharing</h4>-->
                 <ul class="nav nav-tabs" data-tabs="tablist">
-                    {% if project.owner == request.user %}
+                    {% if program.owner == request.user %}
                         <li class="active"><a href="#share" data-toggle="tab">Share</a></li>
                     {% endif %}
-                    <li class="{% if not project.owner == request.user %}active{% endif %}"><a href="#shared-with" data-toggle="tab">Shared With</a></li>
+                    <li class="{% if not program.owner == request.user %}active{% endif %}"><a href="#shared-with" data-toggle="tab">Shared With</a></li>
                 </ul>
             </div>
             <div class="tab-content">
-                {% if project.owner == request.user %}
-                <form class="tab-pane fade in active" id="share" method="POST" action="{% url 'project_share' project.id %}">
+                {% if program.owner == request.user %}
+                <form class="tab-pane fade in active" id="share" method="POST" action="{% url 'program_share' program.id %}">
                     {% csrf_token %}
                     <div class="modal-body">
                         <p>
-                            This will share the web view of the project.  This will not share the underlying Google cloud project
-                            and big query data needed if you wish to access this project outside of the website.
+                            This will share the web view of the program.  This will not share the underlying Google cloud program
+                            and big query data needed if you wish to access this program outside of the website.
                         </p>
                         <label for="share-users">Enter email addresses separated by a comma</label>
                         <textarea class="form-control" name="share_users"></textarea>
@@ -101,9 +101,9 @@
                     </div>
                 </form>
                 {% endif %}
-                <div class="tab-pane fade {% if not project.owner == request.user %}active in{% endif %}" id="shared-with">
+                <div class="tab-pane fade {% if not program.owner == request.user %}active in{% endif %}" id="shared-with">
                     <div class="modal-body">
-                        {% if project.shared.count > 0 %}
+                        {% if program.shared.count > 0 %}
                         <table class="table table-striped">
                             <thead>
                                 <tr>
@@ -112,7 +112,7 @@
                                 </tr>
                             </thead>
                             <tbody>
-                            {% for shared in project.shared.all %}
+                            {% for shared in program.shared.all %}
                                 <tr>
                                     <td>
                                         {% if shared.matched_user %}
@@ -123,7 +123,7 @@
                                         {{shared.email}}
                                     </td>
                                     <td>
-                                        {% if project.owner == request.user %}
+                                        {% if program.owner == request.user %}
                                         <a class="remove-shared-user" role="button" data-shared-id="{{ shared.id }}"><i class="fa fa-times"></i></a>
                                         {% endif %}
                                     </td>
