removed mention of projects (except directory name)

--- a/blink_sass/pages/_workbook.sass
+++ b/blink_sass/pages/_workbook.sass
@@ -114,3 +114,9 @@
       width: calc(100% - 40px)
       transition: width 0.45s ease-in-out
 
+  ul.no-bullet
+    list-style: none
+    margin-left: -15px
+
+  .alert-dismissable
+    margin-top: 8px
