-> #1599: Scatter plot x/y axis bugfixes

--- a/blink_sass/pages/_visualizations.sass
+++ b/blink_sass/pages/_visualizations.sass
@@ -26,7 +26,7 @@
           text-align: end
         &.centered
           text-align: center
-    .x-label-container
+    .x-label-container, .y-label-container
       div
         text-align: center
 
