--- a/blink_sass/pages/_visualizations.sass
+++ b/blink_sass/pages/_visualizations.sass
@@ -46,8 +46,7 @@
         stroke-width: 5px
 
     .extent
-        fill: #000
-        fill-opacity: .1
+        fill: rgba(40,130,50,0.5)
         stroke: #fff
 
     .plot-bar
